finish arabic and english in general template to push it in firebase

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -71,7 +71,8 @@
   "LaYogd3nasr": "لا يوجد عناصر",
   "T3delElasnaf": "تعديل الاصناف",
   "EdaftSnf": "إضافة صنف",
-  "EsmElsanf": "إسم الصنف",
+  "EsmElsanfInAr": "أدخل اسم الصنف بالعربية",
+  "EsmElsanfInEn": "أدخل اسم الصنف بالانجليزية",
   "Ad5lEsmElsnf": "أدخل اسم الصنف",
   "MnFdlkD5lEsmElsnf": "من فضلك أدخل اسم الصنف",
   "S3rElsnf": "سعر الصنف",
@@ -115,7 +116,8 @@
   "AddedSuccessfully": "تمت إضافة",
   "ToCard": "إلي السلة",
   "DeletedSuccessfully": "تم الحذف بنجاح",
-  "Ad5lEsmEltsnef": "أدخل اسم التصنيف",
+  "Ad5lEsmEltsnefInAr": "أدخل اسم التصنيف بالعربية",
+  "Ad5lEsmEltsnefInEn": "أدخل اسم التصنيف بالانجليزية",
   "MnFdlkAd5lEsmEltsnef": "من فضلك أدخل اسم التصنيف",
   "Academies": "الأكاديميات",
   "Subscriptions": "الإشتراكات",
@@ -131,7 +133,8 @@
   "GamePrice": "سعر اللعبة",
   "EnterPriceOfGame": "أدخل سعر اللعبة",
   "PleaseEnterPriceOfGame": "الرجاء إدخال سعر اللعبة",
-  "Description": "وصف",
+  "DescriptionAr": "وصف بالعربية",
+  "DescriptionEn": "وصف بالانجليزية",
   "EnterDescription": "أضف وصفاً",
   "PleaseEnterDescription": "الرجاء إضافة وصف",
   "AddingNewDailyGame": "إضافة لعبة جديدة",
