--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -72,7 +72,8 @@
   "LaYogd3nasr": "No Items Available",
   "T3delElasnaf": "Edit Items",
   "EdaftSnf": "Add New Item",
-  "EsmElsanf": "Item name",
+  "EsmElsanfInAr": "Item name in arabic",
+  "EsmElsanfInEn": "Item name in english",
   "Ad5lEsmElsnf": "Enter item name",
   "MnFdlkD5lEsmElsnf": "Please enter item name",
   "S3rElsnf": "Item price",
@@ -116,7 +117,8 @@
   "AddedSuccessfully": "Added successfully",
   "ToCard": "To Card",
   "DeletedSuccessfully": "Deleted successfully",
-  "Ad5lEsmEltsnef": "Enter Category Name",
+  "Ad5lEsmEltsnefInAr": "Enter Category Name in arabic",
+  "Ad5lEsmEltsnefInEn": "Enter Category Name in english",
   "MnFdlkAd5lEsmEltsnef": "Please Enter Category Name",
   "Academies": "Academies",
   "Subscriptions": "Subscriptions",
@@ -132,7 +134,8 @@
   "GamePrice": "Game Price",
   "EnterPriceOfGame": "Enter price of game",
   "PleaseEnterPriceOfGame": "Please enter price of game",
-  "Description": "Description",
+  "DescriptionAr": "Description in arabic",
+  "DescriptionEn": "Description in english",
   "EnterDescription": "Add description",
   "PleaseEnterDescription": "Please add description",
   "AddingNewDailyGame": "Adding new game",
